--- a/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -5,7 +5,7 @@
     <div class="content">
         <div class="row">
             <div class="col-md-6">
-                <div class="label text-color">Loại hợp đồng</div>
+                <div class="label text-color">{{'menu.contract.type.list' | translate}}</div>
                 <div>
                     <p-dropdown 
                         panelStyleClass="font"
@@ -14,7 +14,7 @@
                         [(ngModel)]="filter_type" 
                         optionLabel="name" 
                         optionValue="id" 
-                        placeholder="Chọn loại hợp đồng" 
+                        placeholder="{{'choose.contract.type' | translate}}" 
                         [filter]="true" 
                         filterBy="name" 
                         [showClear]="true"  
@@ -23,7 +23,7 @@
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">Số hợp đồng</div>
+                <div class="label text-color">{{'contract.number' | translate}}</div>
                 <div class="input-data">
                     <input type="text" [(ngModel)]="filter_contract_no">
                 </div>
@@ -32,14 +32,14 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label text-color">Từ ngày (ngày tạo)</div>
+                <div class="label text-color">{{'createdate.start' | translate}}</div>
                 <div>
                     <p-calendar [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" appendTo="body"></p-calendar>
                 </div>
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">Đến ngày (ngày tạo)</div>
+                <div class="label text-color">{{'createdate.end' | translate}}</div>
                 <div>
                     <p-calendar [(ngModel)]="filter_to_date" [showIcon]="true" dateFormat="dd/mm/yy" appendTo="body"></p-calendar>
                 </div>
@@ -48,27 +48,17 @@
 
         <div class="row" style="padding-top: 10px;" *ngIf="isOrg=='on'">
             <div class="col-md-12">
-                <div class="label text-color">Tổ chức</div>
-                <!-- <p-dropdown    
-                panelStyleClass="font"
-                appendTo="body"
-                [options]="orgList" 
-                formControlName="organization_id" 
-                optionLabel="name" 
-                optionValue="id" 
-                [filter]="true" 
-                filterBy="name" 
-                ></p-dropdown> -->
+                <div class="label text-color">{{'menu.organization.list' | translate}}</div>
                 <div>
                 <p-treeSelect panelStyleClass="font"
-                appendTo="body" [(ngModel)]="selectedNodeOrganization" ngDefaultControl [options]="listOrgCombobox" placeholder="Tất cả" [filter]="true" filterBy="name"  [droppable]="true" (onNodeSelect)="changeOrg()"></p-treeSelect>
+                appendTo="body" [(ngModel)]="selectedNodeOrganization" ngDefaultControl [options]="listOrgCombobox" placeholder="{{'all' | translate}}" [filter]="true" filterBy="name"  [droppable]="true" (onNodeSelect)="changeOrg()"></p-treeSelect>
                 </div>
             </div>
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button" (click)="onSubmit()">Tìm kiếm</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{'btn.search' | translate}}</button>
         </div>
     </div>
   </div>
