--- a/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
+++ b/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
@@ -41,7 +41,7 @@
     <form *ngIf="type==2" [formGroup]="addFormUser" class="content" >
         <div class="row">
             <div class="col-md-12">
-                <div class="label text-color">Tổ chức</div>
+                <div class="label text-color">{{'menu.organization.list' | translate}}</div>
                 <div>
                     <p-dropdown 
                         panelStyleClass="font"
